# SimpleHttpServer

./: .gitignore  CMakeLists.txt  http_test.py  main.cpp  readme.md  simple_epoll_server.c
src/: CMakeLists.txt
src/api/: CMakeLists.txt  greeting.cpp  index.cpp  root.cpp
src/include/api/: greeting.h  index.h  root.h
src/include/networking/: connection_manager.h  http_message_define.h  http_server.h  logger.h  message_parser.h  socket.h
src/networking/: CMakeLists.txt  connection_manager.cpp  http_message_define.cpp  http_server.cpp  message_parser.cpp  socket.cpp
test/: CMakeLists.txt
test/networking/: message_parser_test.cpp  networking_test.cpp
